Clinical Item Display Color Contrast Accessibility issue #378 (#470)
* Fixes issue #378

* Regenerated Reference Screenshots

* Remoeved the disabled color contrast rule

--- a/packages/terra-clinical-item-display/src/ItemComment.scss
+++ b/packages/terra-clinical-item-display/src/ItemComment.scss
@@ -3,7 +3,7 @@
 :local {
   .item-comment {
     @include terra-clinical-item-body;
-    color: var(--terra-clinical-item-display-item-comment-color, #75767d);
+    color: var(--terra-clinical-item-display-item-comment-color, rgba(28, 31, 33, 0.65));
 
     .inline-icon {
       color: var(--terra-clinical-item-display-item-comment-inline-icon-color, rgba(117, 118, 125, 0.3));
